--- a/.github/workflows/urlTOapk.yml
+++ b/.github/workflows/urlTOapk.yml
@@ -1,4 +1,4 @@
-name: Professional URL to APK Converter
+name: Ultimate URL to APK Converter
 
 on:
   push:
@@ -12,6 +12,11 @@ jobs:
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
       - name: Extract Metadata
         id: meta
@@ -33,134 +38,78 @@ jobs:
           distribution: 'zulu'
           java-version: '21'
 
-      - name: Scaffold Native Android Project
+      - name: Initialize Capacitor
         run: |
-          # ১. প্রজেক্ট ফোল্ডার তৈরি
-          mkdir -p app/src/main/java/$(echo ${{ steps.meta.outputs.package }} | sed 's/\./\//g')
-          mkdir -p app/src/main/res/layout
-          mkdir -p app/src/main/res/values
-          mkdir -p app/src/main/res/mipmap-mdpi
-
-          # ২. settings.gradle তৈরি (এটিই মিসিং ছিল)
-          echo "include ':app'" > settings.gradle
-
-          # ৩. রুট build.gradle তৈরি
-          cat <<EOF > build.gradle
-          buildscript {
-              repositories { google(); mavenCentral() }
-              dependencies { classpath 'com.android.tools.build:gradle:8.2.2' }
-          }
-          allprojects { repositories { google(); mavenCentral() } }
-          EOF
-
-          # ৪. app/build.gradle তৈরি
-          cat <<EOF > app/build.gradle
-          plugins { id 'com.android.application' }
-          android {
-              namespace '${{ steps.meta.outputs.package }}'
-              compileSdk 34
-              defaultConfig {
-                  applicationId "${{ steps.meta.outputs.package }}"
-                  minSdk 21
-                  targetSdk 34
-                  versionCode ${{ steps.meta.outputs.code }}
-                  versionName "${{ steps.meta.outputs.version }}"
-              }
-              buildTypes {
-                  release {
-                      minifyEnabled false
-                  }
-              }
-          }
-          dependencies {
-              implementation 'androidx.appcompat:appcompat:1.6.1'
-              implementation 'com.google.android.material:material:1.11.0'
-              implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+          npm install @capacitor/core @capacitor/cli @capacitor/android @capacitor/assets
+          mkdir -p dist && echo "<html></html>" > dist/index.html
+          cat <<EOF > capacitor.config.json
+          {
+            "appId": "${{ steps.meta.outputs.package }}",
+            "appName": "${{ steps.meta.outputs.name }}",
+            "webDir": "dist",
+            "server": { "url": "${{ steps.meta.outputs.url }}", "cleartext": true }
           }
           EOF
+          npx cap add android
 
-          # ৫. AndroidManifest.xml (Internet permission সহ)
-          cat <<EOF > app/src/main/AndroidManifest.xml
-          <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-              <uses-permission android:name="android.permission.INTERNET" />
-              <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-              <application
-                  android:label="${{ steps.meta.outputs.name }}"
-                  android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                  android:usesCleartextTraffic="true">
-                  <activity android:name=".MainActivity" android:exported="true">
-                      <intent-filter>
-                          <action android:name="android.intent.action.MAIN" />
-                          <category android:name="android.intent.category.LAUNCHER" />
-                      </intent-filter>
-                  </activity>
-              </application>
-          </manifest>
-          EOF
+      - name: Inject SwipeRefresh & Professional Logic
+        run: |
+          # ১. SwipeRefreshLayout ডিপেন্ডেন্সি যোগ করা
+          sed -i '/dependencies {/a \    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"' android/app/build.gradle
 
-          # ৬. Layout (SwipeRefreshLayout + WebView)
-          cat <<EOF > app/src/main/res/layout/activity_main.xml
-          <?xml version="1.0" encoding="utf-8"?>
-          <androidx.swiperefreshlayout.widget.SwipeRefreshLayout 
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/swipeRefresh"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-              <WebView
-                  android:id="@+id/webView"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent" />
-          </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-          EOF
-
-          # ৭. MainActivity.java (Logic: Swipe to Refresh + Back Button)
+          # ২. MainActivity.java - সম্পূর্ণ প্রফেশনাল লজিক ইনজেকশন
           PACKAGE_PATH=$(echo "${{ steps.meta.outputs.package }}" | sed 's/\./\//g')
-          cat <<EOF > app/src/main/java/$PACKAGE_PATH/MainActivity.java
+          FILE_PATH="android/app/src/main/java/$PACKAGE_PATH/MainActivity.java"
+          
+          cat <<EOF > "$FILE_PATH"
           package ${{ steps.meta.outputs.package }};
           import android.os.Bundle;
-          import android.webkit.WebSettings;
           import android.webkit.WebView;
-          import android.webkit.WebViewClient;
-          import androidx.appcompat.app.AppCompatActivity;
+          import android.view.ViewGroup;
+          import android.widget.FrameLayout;
           import androidx.swiperefreshlayout.widget.SwipeRefreshLayout;
+          import com.getcapacitor.BridgeActivity;
 
-          public class MainActivity extends AppCompatActivity {
-              private WebView webView;
-              private SwipeRefreshLayout swipeRefresh;
+          public class MainActivity extends BridgeActivity {
+              private SwipeRefreshLayout swipeRefreshLayout;
 
               @Override
               protected void onCreate(Bundle savedInstanceState) {
                   super.onCreate(savedInstanceState);
-                  setContentView(R.layout.activity_main);
+              }
 
-                  webView = findViewById(R.id.webView);
-                  swipeRefresh = findViewById(R.id.swipeRefresh);
+              @Override
+              public void onResume() {
+                  super.onResume();
+                  final WebView webView = this.bridge.getWebView();
+                  
+                  if (webView != null && swipeRefreshLayout == null) {
+                      ViewGroup parent = (ViewGroup) webView.getParent();
+                      swipeRefreshLayout = new SwipeRefreshLayout(this);
+                      
+                      // WebView কে SwipeRefreshLayout এর ভেতরে ঢুকিয়ে দেওয়া
+                      parent.removeView(webView);
+                      swipeRefreshLayout.addView(webView);
+                      parent.addView(swipeRefreshLayout);
 
-                  WebSettings settings = webView.getSettings();
-                  settings.setJavaScriptEnabled(true);
-                  settings.setDomStorageEnabled(true);
-
-                  webView.setWebViewClient(new WebViewClient() {
-                      @Override
-                      public void onPageFinished(WebView view, String url) {
-                          swipeRefresh.setRefreshing(false);
-                      }
-                  });
-
-                  webView.loadUrl("${{ steps.meta.outputs.url }}");
-
-                  swipeRefresh.setOnRefreshListener(new SwipeRefreshLayout.OnRefreshListener() {
-                      @Override
-                      public void onRefresh() {
+                      swipeRefreshLayout.setOnRefreshListener(() -> {
                           webView.reload();
-                      }
-                  });
+                      });
+
+                      webView.setWebViewClient(new com.getcapacitor.BridgeWebViewClient(this.bridge) {
+                          @Override
+                          public void onPageFinished(WebView view, String url) {
+                              super.onPageFinished(view, url);
+                              swipeRefreshLayout.setRefreshing(false);
+                          }
+                      });
+                  }
               }
 
               @Override
               public void onBackPressed() {
-                  if (webView.canGoBack()) {
-                      webView.goBack();
+                  if (this.bridge.getWebView().canGoBack()) {
+                      this.bridge.getWebView().goBack();
                   } else {
                       super.onBackPressed();
                   }
@@ -168,16 +117,164 @@ jobs:
           }
           EOF
 
-          # ৮. গ্র্যাডল রেডি করা
-          gradle wrapper --gradle-version 8.5
+          # ৩. আইকন জেনারেশন
+          if [ -f "assets/icon.png" ]; then 
+            npx capacitor-assets generate --android
+          fi
+
+          # ৪. ভার্সন কোড ও নাম আপডেট
+          sed -i "s/versionCode [0-9]*/versionCode ${{ steps.meta.outputs.code }}/" android/app/build.gradle
+          sed -i "s/versionName \"[^\"]*\"/versionName \"${{ steps.meta.outputs.version }}\"/" android/app/build.gradle
+          
+          npx cap sync android
 
       - name: Build APK
         run: |
-          chmod +x gradlew
-          ./gradlew :app:assembleDebug
+          cd android && chmod +x gradlew
+          ./gradlew assembleDebug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.meta.outputs.name }}-v${{ steps.meta.outputs.version }}
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: android/app/build/outputs/apk/debug/app-debug.apk
+name: Ultimate URL to APK Converter
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source Code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Extract Metadata
+        id: meta
+        run: |
+          APP_NAME=$(jq -r '.appName' assets/url-metadata.json)
+          APP_PKG=$(jq -r '.appPackage' assets/url-metadata.json)
+          APP_URL=$(jq -r '.appUrl' assets/url-metadata.json)
+          APP_VER=$(jq -r '.versionName' assets/url-metadata.json)
+          APP_CODE=$(jq -r '.versionCode' assets/url-metadata.json)
+          echo "name=$APP_NAME" >> $GITHUB_OUTPUT
+          echo "package=$APP_PKG" >> $GITHUB_OUTPUT
+          echo "url=$APP_URL" >> $GITHUB_OUTPUT
+          echo "version=$APP_VER" >> $GITHUB_OUTPUT
+          echo "code=$APP_CODE" >> $GITHUB_OUTPUT
+
+      - name: Setup Java 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '21'
+
+      - name: Initialize Capacitor
+        run: |
+          npm install @capacitor/core @capacitor/cli @capacitor/android @capacitor/assets
+          mkdir -p dist && echo "<html></html>" > dist/index.html
+          cat <<EOF > capacitor.config.json
+          {
+            "appId": "${{ steps.meta.outputs.package }}",
+            "appName": "${{ steps.meta.outputs.name }}",
+            "webDir": "dist",
+            "server": { "url": "${{ steps.meta.outputs.url }}", "cleartext": true }
+          }
+          EOF
+          npx cap add android
+
+      - name: Inject SwipeRefresh & Professional Logic
+        run: |
+          # ১. SwipeRefreshLayout ডিপেন্ডেন্সি যোগ করা
+          sed -i '/dependencies {/a \    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"' android/app/build.gradle
+
+          # ২. MainActivity.java - সম্পূর্ণ প্রফেশনাল লজিক ইনজেকশন
+          PACKAGE_PATH=$(echo "${{ steps.meta.outputs.package }}" | sed 's/\./\//g')
+          FILE_PATH="android/app/src/main/java/$PACKAGE_PATH/MainActivity.java"
+          
+          cat <<EOF > "$FILE_PATH"
+          package ${{ steps.meta.outputs.package }};
+          import android.os.Bundle;
+          import android.webkit.WebView;
+          import android.view.ViewGroup;
+          import android.widget.FrameLayout;
+          import androidx.swiperefreshlayout.widget.SwipeRefreshLayout;
+          import com.getcapacitor.BridgeActivity;
+
+          public class MainActivity extends BridgeActivity {
+              private SwipeRefreshLayout swipeRefreshLayout;
+
+              @Override
+              protected void onCreate(Bundle savedInstanceState) {
+                  super.onCreate(savedInstanceState);
+              }
+
+              @Override
+              public void onResume() {
+                  super.onResume();
+                  final WebView webView = this.bridge.getWebView();
+                  
+                  if (webView != null && swipeRefreshLayout == null) {
+                      ViewGroup parent = (ViewGroup) webView.getParent();
+                      swipeRefreshLayout = new SwipeRefreshLayout(this);
+                      
+                      // WebView কে SwipeRefreshLayout এর ভেতরে ঢুকিয়ে দেওয়া
+                      parent.removeView(webView);
+                      swipeRefreshLayout.addView(webView);
+                      parent.addView(swipeRefreshLayout);
+
+                      swipeRefreshLayout.setOnRefreshListener(() -> {
+                          webView.reload();
+                      });
+
+                      webView.setWebViewClient(new com.getcapacitor.BridgeWebViewClient(this.bridge) {
+                          @Override
+                          public void onPageFinished(WebView view, String url) {
+                              super.onPageFinished(view, url);
+                              swipeRefreshLayout.setRefreshing(false);
+                          }
+                      });
+                  }
+              }
+
+              @Override
+              public void onBackPressed() {
+                  if (this.bridge.getWebView().canGoBack()) {
+                      this.bridge.getWebView().goBack();
+                  } else {
+                      super.onBackPressed();
+                  }
+              }
+          }
+          EOF
+
+          # ৩. আইকন জেনারেশন
+          if [ -f "assets/icon.png" ]; then 
+            npx capacitor-assets generate --android
+          fi
+
+          # ৪. ভার্সন কোড ও নাম আপডেট
+          sed -i "s/versionCode [0-9]*/versionCode ${{ steps.meta.outputs.code }}/" android/app/build.gradle
+          sed -i "s/versionName \"[^\"]*\"/versionName \"${{ steps.meta.outputs.version }}\"/" android/app/build.gradle
+          
+          npx cap sync android
+
+      - name: Build APK
+        run: |
+          cd android && chmod +x gradlew
+          ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.meta.outputs.name }}-v${{ steps.meta.outputs.version }}
+          path: android/app/build/outputs/apk/debug/app-debug.apk
